fixed spacing on portfolio page

--- a/main.scss
+++ b/main.scss
@@ -179,7 +179,7 @@ h4 {
 }
 
 h3 {
-  font-size: 100%;
+  font-size: 230%;
   text-align: center;
   margin: 0;
   color: $Headingcolor;
@@ -278,8 +278,8 @@ h3 {
   width: 60%;
 }
 .skillsicons {
-  height: 50px;
-  width: 50px;
+  height: 48px;
+  width: 48px;
   margin-bottom: 10px;
   display: flex;
   flex-direction: column;
@@ -423,7 +423,7 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 5% 15%;
+    margin: 5% 15% 0% 15%;
 
     .timelineblock {
       display: flex;
@@ -586,7 +586,7 @@ input[type="text"]:focus {
   }
 
   h3 {
-    font-size: 250%;
+    font-size: 230%;
   }
   h4 {
     font-size: 175%;
@@ -672,7 +672,7 @@ input[type="text"]:focus {
         width: 65%;
       }
     }
-    width: 100%;
+    width: 60%;
     #buttonholder {
       display: flex;
       background-color: $lightbackground;
@@ -744,7 +744,6 @@ input[type="text"]:focus {
   }
 
   #portfolio {
-    margin-bottom: 10%;
     #portfoliopieceholder {
       display: flex;
       flex-direction: column;
